tests/errors/from_json_invalid_enum.dang
enum Outcome { PASSED FAILED }

type Child {
  pub outcome: Outcome!
}

type Summary {
  pub children: [Child!]!
}

let summary: Summary! = fromJSON("{\"children\":[{\"outcome\":\"SKIPPED\"}]}")
